--- a/src/api/AlasdairCooper.CSharpLangLdmFeed.Api.csproj
+++ b/src/api/AlasdairCooper.CSharpLangLdmFeed.Api.csproj
@@ -7,7 +7,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <InterceptorsNamespaces>$(InterceptorsNamespaces);Microsoft.AspNetCore.OpenApi.Generated</InterceptorsNamespaces>
         <InvariantGlobalization>true</InvariantGlobalization>
-        <PublishAot>true</PublishAot>
+<!--        Disable AOT for now as unsupported by Ocotkit https://github.com/octokit/webhooks.net/issues/408 -->
+<!--        <PublishAot>true</PublishAot>-->
         <EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
     </PropertyGroup>
 
