--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      API_IMAGE_NAME: ${{ vars.API_IMAGE_NAME }}
+      SSH_DESTINATION: '${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}'
+      COMPOSE_ENV: 'API_IMAGE="${{ env.API_IMAGE_NAME }}" GITHUB_API_TOKEN="${{ secrets.GH_API_TOKEN }}"'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -17,10 +21,25 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build API Docker image
+        run: |
+          docker build -t ${{ env.API_IMAGE_NAME }} -f src/api/Dockerfile .
+
+      - name: Push API Docker image
+        run: |
+          docker push ${{ env.API_IMAGE_NAME }}
+
       - name: Copy files to VPS
         run: |
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git*' --exclude='artifacts/' --exclude='obj/' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/csharplang-ldm-feed/
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git*' --exclude='artifacts/' --exclude='obj/' ./ ${{ env.SSH_DESTINATION }}:~/csharplang-ldm-feed/
 
       - name: Deploy with Podman Compose
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'cd ~/csharplang-ldm-feed && podman compose pull && podman compose up -d'
+          ssh -o StrictHostKeyChecking=no ${{ env.SSH_DESTINATION }} "cd ~/csharplang-ldm-feed && ${{ env.COMPOSE_ENV }} podman compose pull && ${{ env.COMPOSE_ENV }} podman compose up -d"
