--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     env:
       API_IMAGE_NAME: ${{ vars.API_IMAGE_NAME }}
       SSH_DESTINATION: '${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}'
-      COMPOSE_ENV: 'API_IMAGE="${{ env.API_IMAGE_NAME }}" GITHUB_API_TOKEN="${{ secrets.GH_API_TOKEN }}"'
+      COMPOSE_ENV: 'API_IMAGE="${{ vars.API_IMAGE_NAME }}" GITHUB_API_TOKEN="${{ secrets.GH_API_TOKEN }}"'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -30,16 +30,16 @@ jobs:
 
       - name: Build API Docker image
         run: |
-          docker build -t ${{ env.API_IMAGE_NAME }} -f src/api/Dockerfile .
+          docker build -t $API_IMAGE_NAME -f src/api/Dockerfile .
 
       - name: Push API Docker image
         run: |
-          docker push ${{ env.API_IMAGE_NAME }}
+          docker push $API_IMAGE_NAME
 
       - name: Copy files to VPS
         run: |
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git*' --exclude='artifacts/' --exclude='obj/' ./ ${{ env.SSH_DESTINATION }}:~/csharplang-ldm-feed/
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git*' --exclude='artifacts/' --exclude='obj/' ./ $SSH_DESTINATION:~/csharplang-ldm-feed/
 
       - name: Deploy with Podman Compose
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ env.SSH_DESTINATION }} "cd ~/csharplang-ldm-feed && ${{ env.COMPOSE_ENV }} podman compose pull && ${{ env.COMPOSE_ENV }} podman compose up -d"
+          ssh -o StrictHostKeyChecking=no $SSH_DESTINATION "cd ~/csharplang-ldm-feed && $COMPOSE_ENV podman compose pull && $COMPOSE_ENV podman compose up -d"
