--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,24 +6,11 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     env:
       API_IMAGE_NAME: ${{ vars.API_IMAGE_NAME }}
-      SSH_DESTINATION: '${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}'
-      COMPOSE_ENV: 'API_IMAGE="${{ vars.API_IMAGE_NAME }}" GITHUB_API_TOKEN="${{ secrets.GH_API_TOKEN }}"'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -31,13 +18,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build API Docker image
-        run: |
-          docker build -t $API_IMAGE_NAME -f src/api/Dockerfile .
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: $API_IMAGE_NAME
+          file: src/api/Dockerfile
 
-      - name: Push API Docker image
-        run: |
-          docker push $API_IMAGE_NAME
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    env:
+      API_IMAGE_NAME: ${{ vars.API_IMAGE_NAME }}
+      SSH_DESTINATION: '${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}'
+      COMPOSE_ENV: 'API_IMAGE="${{ vars.API_IMAGE_NAME }}" GITHUB_API_TOKEN="${{ secrets.GH_API_TOKEN }}"'
+    steps:
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
       - name: Copy files to VPS
         run: |
@@ -45,4 +44,4 @@ jobs:
 
       - name: Deploy with Podman Compose
         run: |
-          ssh -o StrictHostKeyChecking=no $SSH_DESTINATION "cd ~/csharplang-ldm-feed && $COMPOSE_ENV podman compose pull && $COMPOSE_ENV podman compose up -d"
+          ssh -o StrictHostKeyChecking=no $SSH_DESTINATION "cd ~/csharplang-ldm-feed && podman login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} && $COMPOSE_ENV podman compose pull && $COMPOSE_ENV podman compose up -d"
