--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,11 @@ on:
 
 jobs:
   build:
+    name: '🛠️ build'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -24,8 +28,12 @@ jobs:
           file: src/api/Dockerfile
 
   deploy:
+    name: '🚀 deploy'
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      contents: read
+      packages: read
     env:
       SSH_DESTINATION: '${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}'
       COMPOSE_ENV: 'API_IMAGE="${{ vars.API_IMAGE_NAME }}" GITHUB_API_TOKEN="${{ secrets.GH_API_TOKEN }}"'
