--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,6 @@ jobs:
       packages: read
     env:
       SSH_DESTINATION: '${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}'
-      COMPOSE_ENV: 'API_IMAGE="${{ vars.API_IMAGE_NAME }}" GITHUB_API_TOKEN="${{ secrets.GH_API_TOKEN }}"'
     steps:
       - name: Set up SSH key
         uses: webfactory/ssh-agent@v0.9.0
@@ -51,7 +50,8 @@ jobs:
         run: >
           ssh -o StrictHostKeyChecking=no $SSH_DESTINATION "
           cd ~/csharplang-ldm-feed 
+          && echo "${{ secrets.COMPOSE_ENV }}" > .env
           && podman login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} 
-          && $COMPOSE_ENV podman compose pull 
-          && $COMPOSE_ENV podman compose up --force-recreate --build -d 
+          && podman compose pull 
+          && podman compose up --force-recreate --build -d 
           && docker image prune -f"
