--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,10 @@ jobs:
     permissions:
       contents: read
       packages: read
-    env:
-      SSH_DESTINATION: '${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}'
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
       - name: Set up SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
@@ -44,15 +45,15 @@ jobs:
 
       - name: Copy files to VPS
         run: |
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git*' --exclude='artifacts/' --exclude='obj/' ./ $SSH_DESTINATION:~/csharplang-ldm-feed/
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git*' --exclude='artifacts/' --exclude='obj/' ./ $VPS_SSH_DESTINATION:~/csharplang-ldm-feed/
           
       - name: Write .env file
         run: |
-          ssh -o StrictHostKeyChecking=no $SSH_DESTINATION "echo '${{ secrets.COMPOSE_ENV }}' > ~/csharplang-ldm-feed/.env"
+          ssh -o StrictHostKeyChecking=no $VPS_SSH_DESTINATION "echo '${{ secrets.COMPOSE_ENV }}' > ~/csharplang-ldm-feed/.env"
 
       - name: Deploy with Podman Compose
         run: >
-          ssh -o StrictHostKeyChecking=no $SSH_DESTINATION "
+          ssh -o StrictHostKeyChecking=no $VPS_SSH_DESTINATION "
           cd ~/csharplang-ldm-feed 
           && podman login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} 
           && podman compose pull 
