--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,9 +54,10 @@ jobs:
       - name: Deploy with Podman Compose
         run: >
           ssh -o StrictHostKeyChecking=no ${{ vars.VPS_SSH_DESTINATION }} "
-          cd ~/csharplang-ldm-feed 
-          && lsof -i :10001
+          cd ~/csharplang-ldm-feed
           && podman login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
           && podman compose pull 
-          && podman compose up --force-recreate --build -d 
+          && podman compose down 
+          && podman network prune -f
+          && podman compose up -d 
           && podman image prune -f"
