--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,16 @@ jobs:
       contents: read
       packages: write
     env:
-        ACTOR: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        API_IMAGE_NAME: ${{ vars.API_IMAGE_NAME }}
+      ACTOR: ${{ github.actor }}
+      TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      API_IMAGE_NAME: ${{ vars.API_IMAGE_NAME }}
     steps:
       - name: login to ghcr
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ env.ACTOR }}
-          password: ${{ env.GITHUB_TOKEN }}
+          password: ${{ env.TOKEN }}
 
       - name: build and push
         uses: docker/build-push-action@v6
@@ -48,11 +48,11 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
-        
+
       - name: set SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
+          ssh-private-key: ${{ env.VPS_SSH_KEY }}
 
       - name: create deploy dir
         run: |
@@ -61,7 +61,7 @@ jobs:
       - name: copy files to server
         run: |
           rsync -avz -e "ssh -o StrictHostKeyChecking=no" --exclude='.git*' --exclude='artifacts/' --exclude='obj/' ./ ${{ env.VPS_SSH_DESTINATION }}:${{ env.VPS_DEPLOY_DIR }}
-          
+
       - name: copy secrets to .env
         run: |
           ssh -o StrictHostKeyChecking=no ${{ env.VPS_SSH_DESTINATION }} "echo '${{ env.COMPOSE_ENV }}' > ${{ env.VPS_DEPLOY_DIR }}/.env"
@@ -70,7 +70,7 @@ jobs:
         run: >
           ssh -o StrictHostKeyChecking=no ${{ env.VPS_SSH_DESTINATION }} "
           cd ~/csharplang-ldm-feed
-          && podman login ghcr.io -u ${{ env.ACTOR }} -p ${{ env.GITHUB_TOKEN }}
+          && podman login ghcr.io -u ${{ env.ACTOR }} -p ${{ env.TOKEN }}
           && podman compose pull  
           && podman compose up --force-recreate --build -d 
           && podman image prune -f"
